Added a public & public/images folders for relative file access

--- a/views/index.erb
+++ b/views/index.erb
@@ -9,5 +9,6 @@
       <input type="submit">
     </form>
   <% end %>
-  <img src='http://www.ryanseacrest.com/wp-content/uploads/2012/08/Boo-The-Dog.jpg'>
+  <img src='/images/puppy.jpg'>
 </div>"
+
